# unlimitedfocus

./: .env.example  .gitignore  LOCKWATCH.txt  README.md  manifest.json
.claude/: launch.json
agent/: README.md  package-lock.json  package.json
agent/backend/: schema.json
agent/backend/functions/: chat.ts  digest-ingest.ts  digest-latest.ts  graph-data.ts  interactions.ts
agent/frontend/: index.html
agent/pipeline/: digest_pipeline.json
agent/py/: butterbase.py  cache.py  check.py  chrome.py  deploy_backend.py  deploy_rocketride.py  digest_run.py  extension.py  extract.py  graph.py  graph_sync.py  inspect_data.py  lockwatch.py  pyproject.toml  scrape_common.py  scrape_instagram.py  scrape_linkedin.py  telegram.py  uf_config.py  uf_env.py
agent/scripts/: launch-chrome.sh
agent/src/: config.js  env.js
agent/src/lib/: butterbase.js  extract.js  graph.js
agent/src/scrapers/: instagram.js
agent/src/tools/: check.js  graph-sync.js  inspect.js
src/content/: agent.js  blocker.css  blocker.js  index.js  limiter.js
src/popup/: popup.css  popup.html  popup.js
src/shared/: settings.js  sites.js
test/: blocker.html  rules.test.js
